Fix bug for IOS - adding "_ios" class for body on IOS devices - wrote styles in _for-ios.scss

--- a/css/style.css
+++ b/css/style.css
@@ -4541,3 +4541,106 @@ main {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
+
+body._ios .agency-accordion .agency-accordion__item {
+  position: relative;
+  overflow: hidden;
+  height: 100px;
+  -webkit-transition: height 0.2s linear;
+  transition: height 0.2s linear;
+}
+body._ios .agency-accordion .agency-accordion__item:last-child {
+  height: 120px;
+}
+body._ios .agency-accordion .agency-accordion__item._active {
+  height: 340px;
+}
+body._ios .agency-accordion .agency-accordion__item._active .agency-accordion__item-text {
+  -webkit-animation: openAccordion 0.2s ease-in-out forwards;
+          animation: openAccordion 0.2s ease-in-out forwards;
+}
+body._ios .agency-accordion .agency-accordion__item._active .agency-accordion__item-buttom {
+  opacity: 1;
+}
+body._ios .agency-accordion .agency-accordion__item:nth-child(2) {
+  top: auto;
+}
+body._ios .agency-accordion .agency-accordion__item:nth-child(3) {
+  bottom: auto;
+}
+body._ios .agency-accordion .agency-accordion__item:nth-child(4) {
+  bottom: auto;
+}
+body._ios .agency-accordion .agency-accordion__item:nth-child(5) {
+  bottom: auto;
+}
+body._ios .agency-accordion .agency-accordion__item:nth-child(6) {
+  bottom: auto;
+}
+body._ios .agency-accordion .agency-accordion__item:nth-child(7) {
+  bottom: auto;
+}
+body._ios .animate-processes-title,
+body._ios .animate-processes-text,
+body._ios .animate-processes-button {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+@media (min-width: 1021px) {
+  body._ios .animate-cpa-data-card-1,
+  body._ios .animate-cpa-data-card-2,
+  body._ios .animate-cpa-data-card-3,
+  body._ios .animate-cpa-data-card-4 {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+body._ios .call-center__text-list-item {
+  opacity: 1;
+}
+body._ios .call-center__text-list-item:before {
+  display: none;
+}
+body._ios .call-center__text-list-item .color-opacity {
+  opacity: 0.5;
+}
+body._ios .about-us__cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  align-self: auto;
+  gap: 20px;
+  margin-top: 180px;
+}
+@media (max-height: 850px) {
+  body._ios .about-us__cards {
+    margin-top: 120px;
+  }
+}
+@media (max-width: 840px) {
+  body._ios .about-us__cards {
+    margin-top: 120px;
+  }
+}
+@media (max-width: 767px) {
+  body._ios .about-us__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 600px) {
+  body._ios .about-us__cards {
+    margin-top: 80px;
+  }
+}
